style send button, resolve more ID and Class issues, spacing on form, option for phone on form, resolve hamburger page click, styling and shadowing for opening page, minimize some of about in music, etc.

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
   height: 100vh;
   background-color: rgb(76, 120, 158);  
   text-align: center;
-  padding-top: 170px;
+  padding-top: 10%;
   color: white;
 }
 
@@ -29,12 +29,17 @@
   margin: 50px auto;
 }
 
+#question {
+  font-size: 4em;
+  text-shadow: 2px 2px 2px rgb(0, 0, 0 , 0.9);
+}
+
 .openingChoice {
   color: #000;
   padding: 10px;
   border-radius: 15px;
-  font-size: 1.5em;
-  margin: 15px 25px;
+  font-size: 2em;
+  margin: 15px 45px;
   box-shadow: 2px 2px rgb(0, 0, 0, 0.6);
 }
 
@@ -221,6 +226,9 @@ span {
 
 /*SECTION 2*/
 
+.pageTwo {
+}
+
 .block2 {
   height: 100%;
   margin: 0 25% 35px 25%;
@@ -270,6 +278,7 @@ span {
   /* border: 3px solid rgba(90, 112, 132, 0.45); 
   border-radius: 5px; */
   background-color: black;
+  padding-bottom: 25px;
 }
 
 .screenshots {
@@ -284,8 +293,22 @@ img[alt="screenshot of webpage"] {
   min-height: 100%;
 }
 
+.tubeBoxes {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
 .youtubes {
   border-radius: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .contacts {
@@ -331,26 +354,32 @@ img[alt="screenshot of webpage"] {
   border-style:none none groove none;
 }
 
-#messagebox {
+.messagebox {
   border-radius: 7px;
   border: transparent;
-  margin: 5px auto;
+  margin: 25px auto;
   background-color: #76a1c7;
   font-size: 26px;
   height: 150px;
 }
 
-#send {
+.send {
   color:#337ab7;
-  margin:5% 40%;
+  background-color: black;
+  padding: 3px 25px;
   min-width:55px;
   min-height:28px;
-  border:1px solid rgba(255 255 255 0.7);
+  border: 3px solid white;
   border-radius:5px;
   margin-bottom:2em;
+  font-family: 'Lobster Two', sans-serif;
+  font-size: 1em;
 }
 
-
+.send:hover {
+  background-color: white;
+  border: 3px solid black;
+}
 
 /*Section 4*/
 
